--- a/angular-login-widget-01/src/app/pages/post-component/post-component.component.scss
+++ b/angular-login-widget-01/src/app/pages/post-component/post-component.component.scss
@@ -11,3 +11,13 @@
   width: 100px;
   height: 100px;
 }
+.text-paragraph-div {
+  margin-top: 4px;
+  margin-bottom: 0px;
+  display: inline;
+}
+.text-paragraph-div-inner {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  display: inline;
+}
