--- a/angular-login-widget-01/src/app/pages/post-editor/post-editor.component.html
+++ b/angular-login-widget-01/src/app/pages/post-editor/post-editor.component.html
@@ -1,4 +1,8 @@
 <h2>Editor</h2>
+<button (click)="toggleEdit()">Toggle Edit</button>
 <div *ngIf="post">
-  <app-post-component [postComponent]="post"></app-post-component>
+  <app-post-component
+    [PostComponent]="post"
+    [EditMode]="editMode"
+  ></app-post-component>
 </div>
